2009-12-28  Sancho Lerena <slerena@artica.es>

	* includes/languages/* : Updated languages for 3.0 final release.

	* include/config_process: Fixed problems detected in system/user 
	language settings. Now use config["language"] avoiding use of old 
	token "language_code"
	
	* include/function_config.php: config["language"] is now a "stardard" 
	config token, avoding to use as special one, was giving a big headache in
	order to maintain old compatibility. Now will use config["language"] always
	and create it if doesnt exist using english as base lang.

	* pandoradb_data.sql: Token is not "language" instead "language_code"

	* godmode/setup/setup.php: Use config["language"], manage like other 
	variable in the sytem, avoiding conflicts and problems detected.

2009-12-27  Raúl Mateos  <raulofpandora@gmail.com>

	* extensions/users/menu.png, extensions/dbmanager/menu.png: New files

	* extensions/users_connected.php: Added icon and changed menu section.
	Added new godmode function that allows the user to be edited.

	* extensions/dbmanager.php: Added icon. Added link to the db menu.

	* extensions/pandora_logs.php, update_manager.php: Changed menu section.

2009-12-24  Raúl Mateos  <raulofpandora@gmail.com>

	* images/pandora_logo.jpg: New file, used in dashboard (dashboard should
	use the .png instead this .jpg.

2009-12-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_prediction.php: fix bug to call
	enterprise function without test if the enterprise install.

2009-12-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: fix bug that show SQL error message and don't
	show the actions for compound alerts.
	* include/functions_alerts.php: in function "get_alert_agent_module_actions"